# telegram-presence

./: LICENSE  README.md  README.ru.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
telegram_presence/: __init__.py  content.py  delegate.py  delivery.py  engage.py  group_delivery.py  hooks.py  inbox.py  liveness.py  outbox.py  policy.py  roster.py  thread.py
telegram_presence/transports/: __init__.py  bot_api.py  telethon.py
tests/: conftest.py  test_content.py  test_delegate.py  test_delivery.py  test_engage.py  test_engage_addressing.py  test_engage_caps.py  test_engage_context.py  test_engage_depth.py  test_engage_multichat.py  test_engage_referent.py  test_group_delivery.py  test_inbox.py  test_liveness.py  test_outbox.py  test_policy.py  test_roster.py  test_social_scene.py  test_thread.py  test_transports.py
