[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-presence"
version = "0.2.1"
description = "Group-chat presence and durable Telegram delivery for LLM agents. Stdlib only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rain (Ouroboros project)" }]
keywords = ["telegram", "llm", "agent", "group-chat", "engagement", "outbox"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/tigrohvost/telegram-presence"

[tool.setuptools.packages.find]
include = ["telegram_presence*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
